syntax = "proto3";

package io.vangogiel.chat;

import "google/protobuf/timestamp.proto";

message ChatStreamRequest {
  oneof payload {
    GetUnreadMessagesRequest get_unread_messages_request = 1;
    ConfirmDeliveryRequest confirm_delivery_request = 2;
    SendMessageRequest send_message_request = 3;
  }
}

message GetUnreadMessagesRequest {
  string sender_uuid = 1;
  string recipient_uuid = 2;
}

message ConfirmDeliveryRequest {
  string message_uuid = 1;
}

message SendMessageRequest {
  string sender_uuid = 1;
  string recipient_uuid = 2;
  string content = 3;
  google.protobuf.Timestamp sent_at = 4;
}
