syntax = "proto3";

package io.vangogiel.chat;

import "io/vangogiel/chat/message.proto";
import "io/vangogiel/chat/handling-result.proto";

message ChatStreamResponse {
  string correlation_id = 99;
  oneof payload {
    GetUndeliveredMessagesResponse get_undelivered_messages_response = 1;
    ConfirmDeliveryResponse confirm_delivery_response = 2;
    SendMessageResponse send_message_response = 3;
    ErrorResponse error_response = 4;
  }
}

message GetUndeliveredMessagesResponse {
  repeated Message messages = 1;
}

message ConfirmDeliveryResponse {
  string message_uuid = 1;
  HandlingResult handling_result = 2;
}

message SendMessageResponse {
  string message_uuid = 1;
  HandlingResult handling_result = 2;
}

message ErrorResponse {
  string message = 1;
  string code = 2;
}
