syntax = "proto3";

package io.vangogiel.chat;

import "io/vangogiel/chat/receive-message-request.proto";
import "io/vangogiel/chat/receive-message-stream-response.proto";

service ChatService {
  rpc chatStream(stream ChatStreamRequest) returns (stream ChatStreamResponse);
}
